Fix to homepage issues
No more overlap and overall cleaner codebase

--- a/assets/css/Homepage.css
+++ b/assets/css/Homepage.css
@@ -11,25 +11,23 @@ a:hover {
 }
 
 .button-container {
-  width: 400px;
-  height: 400px;
+  width: 50%;
+  height: 220px;
   position: absolute;
   top: 60%;
-  left: 50%;
-  margin-left: -210px;
+  left: 25%;
+  overflow-y:scroll;
   background-color: transparent;
 }
 
-.row-spacing {
-  margin-bottom: 20px;
+.button-container > a {
+  margin: 8px;
 }
 
 /* Play Now! button */
 .btn-play,
 .btn-play:hover,
 .btn-play:focus {
-  text-shadow: none; /* Prevent inheritence from `body` */
-  text-align: center;
   background-image: url("../buttons/PlayNow.png");
   background-size: 100% 100%;
   background-color: #fff;
@@ -41,8 +39,6 @@ a:hover {
 .btn-dict,
 .btn-dict:hover,
 .btn-dict:focus {
-  text-shadow: none; /* Prevent inheritence from `body` */
-  text-align: center;
   background-color: #fff;
   background-image: url("../buttons/Dictionary.png");
   background-size: 100% 100%;
@@ -54,8 +50,7 @@ a:hover {
 .btn-story,
 .btn-story:hover,
 .btn-story:focus {
-  text-shadow: none; /* Prevent inheritence from `body` */
-  text-align: center;
+
   background-color: #fff;
   background-image: url("../buttons/Story.png");
   background-size: 100% 100%;
@@ -85,6 +80,7 @@ a:hover {
 html,
 body {
   height: 100%;
+  overflow-y: hidden;
 }
 body {
   color: #fff;
@@ -92,143 +88,4 @@ body {
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
   background-image: url("../backgrounds/PP_Homepage.PNG");
   background-size: 100% 100%;
-}
-
-/* Extra markup and styles for table-esque vertical and horizontal centering */
-.site-wrapper {
-  display: table;
-  width: 100%;
-  height: 100%; /* For at least Firefox */
-  min-height: 100%;
-  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-}
-.site-wrapper-inner {
-  display: table-cell;
-  vertical-align: top;
-}
-.cover-container {
-  margin-right: auto;
-  margin-left: auto;
-}
-
-/* Padding for spacing */
-.inner {
-  padding: 10px;
-}
-
-.inner-nav {
-  padding: 20px;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-
-/*
- * Header
- */
-.masthead {
-  background-color: #b22222;
-  background-color: rgba(178, 34, 34, 1); /* Change Navbar color*/
-}
-
-
-.masthead-brand {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.masthead-nav > li {
-  display: inline-block;
-}
-.masthead-nav > li + li {
-  margin-left: 20px;
-}
-.masthead-nav > li > a {
-  padding-right: 0;
-  padding-left: 0;
-  font-size: 16px;
-  font-weight: bold;
-  color: #fff; /* IE8 proofing */
-  color: rgba(255,255,255,.75);
-  border-bottom: 2px solid transparent;
-}
-.masthead-nav > li > a:hover,
-.masthead-nav > li > a:focus {
-  background-color: transparent;
-  border-bottom-color: #a9a9a9;
-  border-bottom-color: rgba(255,255,255,.25);
-}
-.masthead-nav > .active > a,
-.masthead-nav > .active > a:hover,
-.masthead-nav > .active > a:focus {
-  color: #fff;
-  border-bottom-color: #fff;
-}
-
-@media (min-width: 768px) {
-  .masthead-brand {
-    float: left;
-  }
-  .masthead-nav {
-    float: right;
-  }
-}
-
-
-/*
- * Cover
- */
-.cover {
-  padding: 0 20px;
-}
-.cover .btn-lg {
-  padding: 10px 20px;
-  font-weight: bold;
-}
-
-
-/*
- * Footer
- */
-
-.mastfoot {
-  color: #999; /* IE8 proofing */
-  color: rgba(255,255,255,.5);
-}
-
-
-/*
- * Affix and center
- */
-
-@media (min-width: 768px) {
-  /* Pull out the header and footer */
-  .masthead {
-    position: fixed;
-    top: 0;
-  }
-  .mastfoot {
-    position: fixed;
-    bottom: 0;
-
-  }
-  /* Start the vertical centering */
-  .site-wrapper-inner {
-    vertical-align: middle;
-  }
-  /* Handle the widths */
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 100%; /* Must be percentage or pixels for horizontal alignment */
-  }
-}
-
-@media (min-width: 992px) {
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 100%;
-  }
 }
